--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Autômato de uma pilha</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="index.js" defer></script>
 </head>
 <body>
     <form action="">
         <div>
             <label for="entries">Alfabeto de Entrada:</label>
             <input type="text" id="entries" name="entries" placeholder="a,a,b,...">
+            <span id="entries-preview"></span>
         </div>
         <div>
             <label for="states">Lista de Estados:</label>
