feat: input estados reativo com regras proprias

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <div>
             <label for="states">Lista de Estados:</label>
             <input type="text" id="states" name="states" placeholder="q0,q1,q2,...">
+            <span id="states-preview"></span>
+
         </div>
         <div>
             <label for="first-state">Estado Inicial</label>
