feat: tabela de estados só aceita o alfabeto definido pelo usuário

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         </div>
         <div>
             <label for="alphabet">Alfabeto da pilha: </label>
-            <input type="text" id="alphabet" name="alphabet" placeholder="A,B,C,...">
+            <input type="text" id="stack-alphabet" name="alphabet" placeholder="A,B,C,...">
+            <span id = "stack-alphabet-preview"></span>
         </div>
         <div>
             <label for="transactions">Tabela de transição:</label>
